Fix/image sharp (#7)
* Overall
  * Added projects page
  * Added projects data
  * Added projects preview image screenshots
  * Added CardLabel component
  * Added CardFooter component
  * Fixed builds in other projects in
    order to highlight them here
  * Fixed build warnings
  * Fixed Card UI: background color
  * Fixed Card UI: intersection observer highlight
  * added product descriptions
  * Fixed background gradient on mobile to diagonal
  * Removed extra padding on Thumbnail
  * Fixed index page styling to be symmetrical
  * Fixed copy to be more succinct
  * Added sharp image package
  * removed TODO: list
  * Fixed thumbnail spacing
  * added symmetry to resume page
  * added Modal functionality to projects image previews
  * added project card styling
  * removed project card link
  * added individual project card urls: website and repo
  * removed todos
  * repo cleanup
  * Fixed build
    * icon names were not pulled from enum
  * Fixed lighthouse issues with lists
    * Fixed styles
  * Cleanup

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -40,7 +40,7 @@
 }
 
 html,
-body>div,
+body>#__next,
 body {
   height: 100vh;
   max-width: 100vw;
